--- a/css/inputMobile.css
+++ b/css/inputMobile.css
@@ -767,3 +767,18 @@ text-align: justify;
     font-family: "IRANSansWeb400";
     text-align: justify;
   }
+
+  main.posterList .listcontents{
+    position: relative;
+  }
+  main.posterList .listcontents .bg{
+    background: url('../images/bg (2).png');
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 300px;
+    background-size: cover;
+    transform: translateY(-39%);
+  }
