--- a/css/outputMobile.css
+++ b/css/outputMobile.css
@@ -729,14 +729,6 @@ video {
   top: 70%;
 }
 
-.right-\[\.5em\] {
-  right: .5em;
-}
-
-.top-\[11em\] {
-  top: 11em;
-}
-
 .isolate {
   isolation: isolate;
 }
@@ -1162,12 +1154,12 @@ video {
   height: 42px;
 }
 
-.h-\[50svh\] {
-  height: 50svh;
-}
-
 .h-\[50vh\] {
   height: 50vh;
+}
+
+.h-\[51svh\] {
+  height: 51svh;
 }
 
 .h-\[55px\] {
@@ -1196,14 +1188,6 @@ video {
 
 .h-svh {
   height: 100svh;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[51svh\] {
-  height: 51svh;
 }
 
 .min-h-\[30px\] {
@@ -1339,14 +1323,6 @@ video {
 .w-max {
   width: -moz-max-content;
   width: max-content;
-}
-
-.w-\[13\%\] {
-  width: 13%;
-}
-
-.w-\[60\%\] {
-  width: 60%;
 }
 
 .max-w-max {
@@ -1995,10 +1971,6 @@ video {
   gap: 5px;
 }
 
-.gap-\[3rem\] {
-  gap: 3rem;
-}
-
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
@@ -2513,10 +2485,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-\[\#ffffff90\] {
-  border-color: #ffffff90;
 }
 
 .\!bg-mainBlue {
@@ -3202,10 +3170,6 @@ video {
 
 .leading-\[30px\] {
   line-height: 30px;
-}
-
-.leading-\[22\.45px\] {
-  line-height: 22.45px;
 }
 
 .text-\[\#336699\]\/\[\.35\] {
@@ -4641,6 +4605,10 @@ main.posterList .listcontents .bg{
   transform: translateY(-39%);
 }
 
+.AboutUs-mobile .inVideo {
+  position: relative;
+}
+
 @media (min-width: 480px) {
   .sm\:container {
     width: 100%;
@@ -5036,11 +5004,6 @@ main.posterList .listcontents .bg{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:text-yallow:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 203 5 / var(--tw-text-opacity));
-}
-
 .hover\:shadow-\[0px_4px_12px_0px_rgba\(0\2c _0\2c _0\2c _0\.3\)\]:hover {
   --tw-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.3);
   --tw-shadow-colored: 0px 4px 12px 0px var(--tw-shadow-color);
@@ -5080,25 +5043,6 @@ main.posterList .listcontents .bg{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.group\/header.goTop .group-\[\&\.goTop\]\/header\:translate-y-\[-100\%\] {
-  --tw-translate-y: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group\/header.goTop .group-\[\&\.goTop\]\/header\:translate-y-\[-29\%\] {
-  --tw-translate-y: -29%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group\/header.goTop .group-\[\&\.goTop\]\/header\:\!bg-mainBlue {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(25 74 150 / var(--tw-bg-opacity)) !important;
-}
-
-.group\/header.light .group-\[\&\.light\]\/header\:bg-\[transparent\] {
-  background-color: transparent;
-}
-
 @media (min-width: 480px) {
   .sm\:underline {
     text-decoration-line: underline;
@@ -5132,10 +5076,6 @@ main.posterList .listcontents .bg{
 .\[\&\.fade-left\]\:before\:left-0.fade-left::before {
   content: var(--tw-content);
   left: 0px;
-}
-
-.\[\&\.goDown\]\:top-\[-100vh\].goDown {
-  top: -100vh;
 }
 
 .\[\&\.goDown\]\:translate-y-\[-100\%\].goDown {
